--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "url": "https://github.com/ASObando/NodeJS/issues"
   },
   "homepage": "https://github.com/ASObando/NodeJS#readme",
+  "engines":{
+      "node": "10.x"
+  },
   "dependencies": {
     "express": "^4.17.1"
   }
